--- a/data/apogee/fits/table.tex
+++ b/data/apogee/fits/table.tex
@@ -14,3 +14,13 @@ disc&   3-4&0.9953^{+0.0013}_{-0.0011}&-580.0^{+2.7}_{-2.7}&-17.0^{+2.9}_{-2.6}&
 -&   4-5&0.0004^{+0.0002}_{-0.0002}&668.4^{+23.6}_{-24.5}&39.6^{+73.2}_{-92.4}&-700.1^{+10.3}_{-10.9}&15.9^{+6.8}_{-6.0}&19.5^{+5.3}_{-2.7}&11.5^{+0.5}_{-0.4}&235.3^{+99.8}_{-50.2}&\\
 -&   4-5&0.0185^{+0.0009}_{-0.0009}&-953.2^{+12.4}_{-10.8}&13.9^{+5.5}_{-5.2}&18.1^{+2.4}_{-2.1}&53.4^{+5.3}_{-7.0}&30.2^{+6.3}_{-3.6}&12.2^{+0.5}_{-0.4}&90.4^{+12.8}_{-11.9}&\\
 disc&   4-5&0.981^{+0.0008}_{-0.0009}&-853.2^{+2.4}_{-2.9}&-13.6^{+1.1}_{-1.3}&-5.3^{+0.4}_{-0.5}&76.1^{+0.8}_{-0.8}&169.6^{+0.9}_{-1.1}&133.1^{+0.6}_{-0.6}&276.1^{+0.4}_{-0.4}&\\
+comp &radii & f & $L_z$ & $L_z$& $L_z$ & $lpha$ & $\sigma_z$ & $\sigma_z$ & $\sigma_z$ \\
+disc&   5-15&0.1955^{+0.0372}_{-0.0413}&-157.8^{+9.9}_{-9.5}&2.3^{+8.7}_{-8.2}&-0.8^{+8.3}_{-8.0}&47.9^{+36.6}_{-31.2}&118.1^{+7.5}_{-7.1}&118.2^{+9.1}_{-8.3}&71.3^{+5.5}_{-4.9}&\\
+bar&   5-15&0.6235^{+0.0382}_{-0.0349}&-38.8^{+5.5}_{-5.6}&2.9^{+3.0}_{-2.9}&-0.3^{+2.2}_{-2.2}&53.5^{+3.5}_{-3.6}&76.5^{+2.9}_{-3.1}&53.9^{+2.3}_{-2.5}&57.6^{+3.3}_{-3.3}&\\
+knot&   5-15&0.1807^{+0.0157}_{-0.0162}&-1.6^{+1.2}_{-1.2}&2.0^{+1.8}_{-2.1}&2.7^{+1.3}_{-1.4}&23.0^{+5.3}_{-5.1}&23.3^{+2.5}_{-2.4}&10.5^{+0.8}_{-0.4}&10.4^{+0.7}_{-0.3}&\\
+-&  15-25&0.0015^{+0.0007}_{-0.001}&244.9^{+54.0}_{-66.8}&421.3^{+129.5}_{-78.9}&-259.0^{+136.1}_{-336.0}&59.5^{+41.6}_{-20.6}&46.9^{+32.9}_{-28.7}&30.1^{+31.5}_{-16.6}&13.9^{+10.5}_{-3.0}&\\
+-&  15-25&0.0291^{+0.0076}_{-0.0088}&-251.0^{+12.8}_{-10.8}&44.0^{+23.7}_{-22.0}&163.5^{+9.9}_{-9.0}&61.4^{+6.3}_{-6.7}&91.9^{+17.5}_{-14.9}&29.1^{+8.5}_{-8.0}&17.7^{+12.1}_{-5.9}&\\
+bar&  15-25&0.9692^{+0.0089}_{-0.0077}&-188.5^{+3.5}_{-3.5}&-3.7^{+2.7}_{-2.9}&-2.1^{+2.1}_{-1.9}&69.5^{+2.1}_{-2.1}&122.2^{+2.1}_{-2.1}&86.5^{+1.6}_{-1.6}&142.7^{+2.6}_{-2.5}&\\
+-&  25-35&0.0014^{+0.0004}_{-0.0005}&260.7^{+9.9}_{-10.4}&177.0^{+98.1}_{-27.6}&-594.6^{+39.0}_{-33.8}&27.6^{+4.4}_{-13.2}&14.8^{+6.9}_{-2.9}&246.6^{+187.8}_{-111.3}&12.3^{+2.9}_{-1.5}&\\
+disc&  25-35&0.4259^{+0.0279}_{-0.0254}&-540.3^{+6.3}_{-6.6}&-14.4^{+4.1}_{-4.5}&7.8^{+3.4}_{-3.4}&78.1^{+9.6}_{-7.0}&168.2^{+3.0}_{-2.7}&158.7^{+3.6}_{-2.8}&148.0^{+3.5}_{-3.3}&\\
+bar&  25-35&0.5728^{+0.0256}_{-0.0278}&-368.1^{+6.9}_{-6.5}&-5.6^{+3.3}_{-2.8}&-3.4^{+1.6}_{-1.6}&73.6^{+0.9}_{-0.9}&154.9^{+2.1}_{-2.1}&77.0^{+2.0}_{-1.8}&180.5^{+3.4}_{-3.3}&\\
