--- a/data/apogee/fits/table.tex
+++ b/data/apogee/fits/table.tex
@@ -1,26 +1,25 @@
-comp &radii & f & $L_z$ & $L_z$& $L_z$ & $lpha$ & $\sigma_z$ & $\sigma_z$ & $\sigma_z$ \\
-disc&   0-1&0.1653^{+0.0247}_{-0.0246}&-104.5^{+7.0}_{-6.5}&3.7^{+9.6}_{-10.0}&1.2^{+9.0}_{-9.2}&53.8^{+43.7}_{-27.6}&118.0^{+10.1}_{-8.4}&115.6^{+10.5}_{-8.0}&33.8^{+4.5}_{-3.9}&\\
-bar&   0-1&0.5945^{+0.0264}_{-0.0267}&-14.3^{+3.3}_{-3.2}&0.9^{+2.9}_{-3.0}&-0.8^{+2.1}_{-2.1}&42.7^{+2.7}_{-2.8}&76.8^{+2.6}_{-2.5}&49.2^{+2.3}_{-2.3}&38.8^{+2.6}_{-2.6}&\\
-knot&   0-1&0.2396^{+0.0186}_{-0.0195}&-0.2^{+0.9}_{-0.8}&0.9^{+1.0}_{-1.7}&1.6^{+1.4}_{-1.6}&17.6^{+7.3}_{-6.6}&20.7^{+1.8}_{-1.7}&10.9^{+1.3}_{-0.7}&10.1^{+0.2}_{-0.1}&\\
-disc&   1-2&0.2947^{+0.0292}_{-0.0297}&-193.0^{+9.1}_{-9.1}&-9.4^{+6.4}_{-6.5}&0.6^{+6.8}_{-6.2}&35.7^{+11.6}_{-12.5}&148.2^{+5.9}_{-5.6}&132.7^{+5.8}_{-5.0}&84.0^{+5.1}_{-5.1}&\\
-bar&   1-2&0.5124^{+0.0255}_{-0.0263}&-51.9^{+5.1}_{-5.2}&-2.7^{+2.9}_{-2.9}&3.1^{+2.4}_{-2.3}&35.6^{+4.3}_{-4.1}&80.6^{+3.3}_{-3.2}&59.3^{+3.4}_{-3.4}&55.0^{+3.4}_{-3.3}&\\
-knot&   1-2&0.192^{+0.0148}_{-0.0154}&-0.1^{+0.7}_{-0.5}&0.1^{+0.6}_{-1.1}&-0.2^{+0.9}_{-0.5}&28.1^{+4.4}_{-4.2}&25.8^{+2.3}_{-2.2}&10.9^{+1.3}_{-0.7}&10.5^{+0.8}_{-0.4}&\\
-disc&   2-3&0.6627^{+0.0154}_{-0.0144}&-366.0^{+3.5}_{-3.1}&-11.0^{+2.9}_{-2.8}&2.3^{+1.2}_{-1.5}&69.9^{+2.2}_{-2.1}&172.4^{+2.0}_{-1.8}&143.5^{+1.5}_{-1.5}&165.4^{+2.2}_{-2.4}&\\
--&   2-3&0.0007^{+0.0004}_{-0.0005}&-121.4^{+48.9}_{-109.1}&99.4^{+149.0}_{-64.4}&-36.1^{+110.8}_{-168.2}&47.1^{+22.0}_{-21.1}&15.0^{+7.0}_{-3.2}&15.0^{+6.7}_{-2.9}&14.5^{+6.2}_{-2.9}&\\
-bar&   2-3&0.3366^{+0.0144}_{-0.0154}&-123.2^{+5.5}_{-4.6}&-4.5^{+2.2}_{-3.7}&2.6^{+1.5}_{-1.8}&63.5^{+1.9}_{-2.0}&93.0^{+2.9}_{-2.2}&56.1^{+2.3}_{-1.9}&101.2^{+4.4}_{-4.1}&\\
-disc&   3-4&0.6619^{+0.0226}_{-0.0231}&-621.4^{+4.8}_{-5.1}&-23.2^{+3.2}_{-3.5}&3.0^{+2.1}_{-2.9}&70.1^{+5.9}_{-6.7}&184.1^{+2.6}_{-2.5}&172.8^{+2.7}_{-2.7}&166.8^{+3.0}_{-3.2}&\\
-bar&   3-4&0.3337^{+0.0228}_{-0.0228}&-422.3^{+9.7}_{-9.8}&5.5^{+4.2}_{-3.8}&0.9^{+3.4}_{-3.2}&72.2^{+1.3}_{-1.2}&170.7^{+4.2}_{-4.1}&78.3^{+3.2}_{-3.0}&197.1^{+5.0}_{-4.6}&\\
--&   3-4&0.0042^{+0.0008}_{-0.0009}&309.0^{+7.9}_{-8.2}&-62.0^{+50.0}_{-53.1}&-73.2^{+50.3}_{-43.8}&54.4^{+23.6}_{-18.8}&241.9^{+38.8}_{-30.7}&274.5^{+45.7}_{-34.4}&12.8^{+4.3}_{-2.0}&\\
-comp &radii & f & $L_z$ & $L_z$& $L_z$ & $lpha$ & $\sigma_z$ & $\sigma_z$ & $\sigma_z$ \\
-disc&   5-15&0.2201^{+0.0224}_{-0.0242}&-135.0^{+6.4}_{-6.5}&-2.4^{+7.5}_{-7.2}&3.6^{+7.4}_{-7.0}&42.8^{+36.0}_{-40.0}&129.4^{+8.3}_{-7.1}&129.1^{+9.1}_{-7.6}&59.9^{+4.5}_{-4.1}&\\
-bar&   5-15&0.5638^{+0.0237}_{-0.0223}&-26.0^{+3.8}_{-3.6}&1.0^{+2.6}_{-2.6}&1.7^{+2.0}_{-2.0}&33.6^{+3.1}_{-3.0}&75.0^{+2.3}_{-2.5}&49.7^{+2.4}_{-2.3}&47.3^{+2.7}_{-2.5}&\\
-knot&   5-15&0.2157^{+0.0154}_{-0.016}&-0.7^{+1.0}_{-0.8}&1.0^{+1.1}_{-1.6}&1.3^{+1.1}_{-1.2}&20.2^{+5.7}_{-5.3}&22.4^{+2.0}_{-1.8}&10.6^{+0.9}_{-0.5}&10.1^{+0.2}_{-0.1}&\\
-disc&  15-25&0.4384^{+0.0281}_{-0.0279}&-261.8^{+8.0}_{-7.8}&-11.2^{+5.2}_{-5.4}&-3.0^{+5.3}_{-5.1}&43.7^{+7.6}_{-7.5}&154.3^{+4.6}_{-4.1}&135.1^{+4.1}_{-3.8}&127.0^{+4.7}_{-4.9}&\\
-bar&  15-25&0.4248^{+0.0269}_{-0.0264}&-87.2^{+6.0}_{-6.2}&-5.7^{+3.7}_{-3.8}&4.9^{+2.9}_{-3.0}&47.3^{+3.9}_{-4.1}&90.2^{+3.4}_{-3.4}&63.3^{+3.5}_{-3.5}&65.6^{+4.5}_{-4.1}&\\
-knot&  15-25&0.1372^{+0.0104}_{-0.0109}&-0.1^{+1.1}_{-0.7}&-0.3^{+1.6}_{-0.8}&-0.9^{+1.4}_{-0.9}&25.1^{+4.1}_{-3.9}&25.0^{+2.1}_{-2.1}&10.4^{+0.6}_{-0.3}&12.1^{+1.3}_{-1.1}&\\
-disc&  25-35&0.5188^{+0.0164}_{-0.0163}&-519.3^{+4.5}_{-3.9}&-12.2^{+2.0}_{-2.2}&3.8^{+1.8}_{-2.0}&77.0^{+5.7}_{-5.9}&185.7^{+2.2}_{-2.2}&176.2^{+2.1}_{-2.0}&148.7^{+2.4}_{-2.4}&\\
--&  25-35&0.0022^{+0.0006}_{-0.0007}&284.6^{+13.4}_{-10.8}&-215.7^{+30.5}_{-33.9}&-279.0^{+18.0}_{-15.8}&79.7^{+5.2}_{-3.7}&214.4^{+38.0}_{-31.2}&53.2^{+13.8}_{-8.1}&13.3^{+6.1}_{-2.0}&\\
-bar&  25-35&0.4791^{+0.0164}_{-0.0164}&-312.9^{+5.7}_{-5.6}&4.1^{+2.8}_{-2.1}&-2.3^{+2.6}_{-2.7}&71.6^{+1.1}_{-1.1}&151.5^{+2.3}_{-2.1}&85.5^{+1.8}_{-1.5}&184.7^{+2.8}_{-3.0}&\\
--&  35-45&0.0038^{+0.0008}_{-0.0008}&311.3^{+8.9}_{-9.1}&-96.7^{+67.2}_{-61.1}&494.8^{+29.0}_{-29.6}&68.0^{+14.4}_{-13.8}&223.6^{+47.4}_{-33.6}&570.6^{+108.2}_{-77.4}&12.9^{+4.6}_{-2.0}&\\
--&  35-45&0.0007^{+0.0003}_{-0.0004}&21.8^{+21.1}_{-18.7}&-66.0^{+369.8}_{-99.8}&568.1^{+193.9}_{-20.6}&73.6^{+36.1}_{-9.2}&63.1^{+37.5}_{-30.9}&13.6^{+6.1}_{-2.6}&13.9^{+7.3}_{-2.8}&\\
-disc&  35-45&0.9955^{+0.0009}_{-0.0008}&-553.8^{+2.9}_{-2.9}&-14.0^{+2.3}_{-2.4}&-1.2^{+1.2}_{-0.8}&69.7^{+1.9}_{-1.8}&181.3^{+1.7}_{-1.8}&148.6^{+1.4}_{-1.3}&205.2^{+2.3}_{-2.3}&\\
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
+disc&0.0-1.0&0.1653^{+0.0247}_{-0.0246}&3.7^{+9.6}_{-10.0}&1.2^{+9.0}_{-9.2}&-104.5^{+7.0}_{-6.5}&53.8^{+43.7}_{-27.6}&118.0^{+10.1}_{-8.4}&115.6^{+10.5}_{-8.0}&33.8^{+4.5}_{-3.9}&\\
+bar&0.0-1.0&0.5945^{+0.0264}_{-0.0267}&0.9^{+2.9}_{-3.0}&-0.8^{+2.1}_{-2.1}&-14.3^{+3.3}_{-3.2}&42.7^{+2.7}_{-2.8}&76.8^{+2.6}_{-2.5}&49.2^{+2.3}_{-2.3}&38.8^{+2.6}_{-2.6}&\\
+knot&0.0-1.0&0.2396^{+0.0186}_{-0.0195}&0.9^{+1.0}_{-1.7}&1.6^{+1.4}_{-1.6}&-0.2^{+0.9}_{-0.8}&17.6^{+7.3}_{-6.6}&20.7^{+1.8}_{-1.7}&10.9^{+1.3}_{-0.7}&10.1^{+0.2}_{-0.1}&\\
+disc&0.5-1.5&0.2201^{+0.0224}_{-0.0242}&-2.4^{+7.5}_{-7.2}&3.6^{+7.4}_{-7.0}&-135.0^{+6.4}_{-6.5}&42.8^{+36.0}_{-40.0}&129.4^{+8.3}_{-7.1}&129.1^{+9.1}_{-7.6}&59.9^{+4.5}_{-4.1}&\\
+bar&0.5-1.5&0.5638^{+0.0237}_{-0.0223}&1.0^{+2.6}_{-2.6}&1.7^{+2.0}_{-2.0}&-26.0^{+3.8}_{-3.6}&33.6^{+3.1}_{-3.0}&75.0^{+2.3}_{-2.5}&49.7^{+2.4}_{-2.3}&47.3^{+2.7}_{-2.5}&\\
+knot&0.5-1.5&0.2157^{+0.0154}_{-0.016}&1.0^{+1.1}_{-1.6}&1.3^{+1.1}_{-1.2}&-0.7^{+1.0}_{-0.8}&20.2^{+5.7}_{-5.3}&22.4^{+2.0}_{-1.8}&10.6^{+0.9}_{-0.5}&10.1^{+0.2}_{-0.1}&\\
+disc&1.0-2.0&0.2947^{+0.0292}_{-0.0297}&-9.4^{+6.4}_{-6.5}&0.6^{+6.8}_{-6.2}&-193.0^{+9.1}_{-9.1}&35.7^{+11.6}_{-12.5}&148.2^{+5.9}_{-5.6}&132.7^{+5.8}_{-5.0}&84.0^{+5.1}_{-5.1}&\\
+bar&1.0-2.0&0.5124^{+0.0255}_{-0.0263}&-2.7^{+2.9}_{-2.9}&3.1^{+2.4}_{-2.3}&-51.9^{+5.1}_{-5.2}&35.6^{+4.3}_{-4.1}&80.6^{+3.3}_{-3.2}&59.3^{+3.4}_{-3.4}&55.0^{+3.4}_{-3.3}&\\
+knot&1.0-2.0&0.192^{+0.0148}_{-0.0154}&0.1^{+0.6}_{-1.1}&-0.2^{+0.9}_{-0.5}&-0.1^{+0.7}_{-0.5}&28.1^{+4.4}_{-4.2}&25.8^{+2.3}_{-2.2}&10.9^{+1.3}_{-0.7}&10.5^{+0.8}_{-0.4}&\\
+disc&1.5-2.5&0.4384^{+0.0281}_{-0.0279}&-11.2^{+5.2}_{-5.4}&-3.0^{+5.3}_{-5.1}&-261.8^{+8.0}_{-7.8}&43.7^{+7.6}_{-7.5}&154.3^{+4.6}_{-4.1}&135.1^{+4.1}_{-3.8}&127.0^{+4.7}_{-4.9}&\\
+bar&1.5-2.5&0.4248^{+0.0269}_{-0.0264}&-5.7^{+3.7}_{-3.8}&4.9^{+2.9}_{-3.0}&-87.2^{+6.0}_{-6.2}&47.3^{+3.9}_{-4.1}&90.2^{+3.4}_{-3.4}&63.3^{+3.5}_{-3.5}&65.6^{+4.5}_{-4.1}&\\
+knot&1.5-2.5&0.1372^{+0.0104}_{-0.0109}&-0.3^{+1.6}_{-0.8}&-0.9^{+1.4}_{-0.9}&-0.1^{+1.1}_{-0.7}&25.1^{+4.1}_{-3.9}&25.0^{+2.1}_{-2.1}&10.4^{+0.6}_{-0.3}&12.1^{+1.3}_{-1.1}&\\
+disc&2.0-3.0&0.6627^{+0.0154}_{-0.0144}&-11.0^{+2.9}_{-2.8}&2.3^{+1.2}_{-1.5}&-366.0^{+3.5}_{-3.1}&69.9^{+2.2}_{-2.1}&172.4^{+2.0}_{-1.8}&143.5^{+1.5}_{-1.5}&165.4^{+2.2}_{-2.4}&\\
+-&2.0-3.0&0.0007^{+0.0004}_{-0.0005}&99.4^{+149.0}_{-64.4}&-36.1^{+110.8}_{-168.2}&-121.4^{+48.9}_{-109.1}&47.1^{+22.0}_{-21.1}&15.0^{+7.0}_{-3.2}&15.0^{+6.7}_{-2.9}&14.5^{+6.2}_{-2.9}&\\
+bar&2.0-3.0&0.3366^{+0.0144}_{-0.0154}&-4.5^{+2.2}_{-3.7}&2.6^{+1.5}_{-1.8}&-123.2^{+5.5}_{-4.6}&63.5^{+1.9}_{-2.0}&93.0^{+2.9}_{-2.2}&56.1^{+2.3}_{-1.9}&101.2^{+4.4}_{-4.1}&\\
+disc&2.5-3.5&0.5188^{+0.0164}_{-0.0163}&-12.2^{+2.0}_{-2.2}&3.8^{+1.8}_{-2.0}&-519.3^{+4.5}_{-3.9}&77.0^{+5.7}_{-5.9}&185.7^{+2.2}_{-2.2}&176.2^{+2.1}_{-2.0}&148.7^{+2.4}_{-2.4}&\\
+-&2.5-3.5&0.0022^{+0.0006}_{-0.0007}&-215.7^{+30.5}_{-33.9}&-279.0^{+18.0}_{-15.8}&284.6^{+13.4}_{-10.8}&79.7^{+5.2}_{-3.7}&214.4^{+38.0}_{-31.2}&53.2^{+13.8}_{-8.1}&13.3^{+6.1}_{-2.0}&\\
+bar&2.5-3.5&0.4791^{+0.0164}_{-0.0164}&4.1^{+2.8}_{-2.1}&-2.3^{+2.6}_{-2.7}&-312.9^{+5.7}_{-5.6}&71.6^{+1.1}_{-1.1}&151.5^{+2.3}_{-2.1}&85.5^{+1.8}_{-1.5}&184.7^{+2.8}_{-3.0}&\\
+disc&3.0-4.0&0.6619^{+0.0226}_{-0.0231}&-23.2^{+3.2}_{-3.5}&3.0^{+2.1}_{-2.9}&-621.4^{+4.8}_{-5.1}&70.1^{+5.9}_{-6.7}&184.1^{+2.6}_{-2.5}&172.8^{+2.7}_{-2.7}&166.8^{+3.0}_{-3.2}&\\
+bar&3.0-4.0&0.3337^{+0.0228}_{-0.0228}&5.5^{+4.2}_{-3.8}&0.9^{+3.4}_{-3.2}&-422.3^{+9.7}_{-9.8}&72.2^{+1.3}_{-1.2}&170.7^{+4.2}_{-4.1}&78.3^{+3.2}_{-3.0}&197.1^{+5.0}_{-4.6}&\\
+-&3.0-4.0&0.0042^{+0.0008}_{-0.0009}&-62.0^{+50.0}_{-53.1}&-73.2^{+50.3}_{-43.8}&309.0^{+7.9}_{-8.2}&54.4^{+23.6}_{-18.8}&241.9^{+38.8}_{-30.7}&274.5^{+45.7}_{-34.4}&12.8^{+4.3}_{-2.0}&\\
+-&3.5-4.5&0.0038^{+0.0008}_{-0.0008}&-96.7^{+67.2}_{-61.1}&494.8^{+29.0}_{-29.6}&311.3^{+8.9}_{-9.1}&68.0^{+14.4}_{-13.8}&223.6^{+47.4}_{-33.6}&570.6^{+108.2}_{-77.4}&12.9^{+4.6}_{-2.0}&\\
+-&3.5-4.5&0.0007^{+0.0003}_{-0.0004}&-66.0^{+369.8}_{-99.8}&568.1^{+193.9}_{-20.6}&21.8^{+21.1}_{-18.7}&73.6^{+36.1}_{-9.2}&63.1^{+37.5}_{-30.9}&13.6^{+6.1}_{-2.6}&13.9^{+7.3}_{-2.8}&\\
+disc&3.5-4.5&0.9955^{+0.0009}_{-0.0008}&-14.0^{+2.3}_{-2.4}&-1.2^{+1.2}_{-0.8}&-553.8^{+2.9}_{-2.9}&69.7^{+1.9}_{-1.8}&181.3^{+1.7}_{-1.8}&148.6^{+1.4}_{-1.3}&205.2^{+2.3}_{-2.3}&\\
