--- a/data/barmock/fits/table.tex
+++ b/data/barmock/fits/table.tex
@@ -1,6 +1,6 @@
 comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.1435^{+0.0196}_{-0.0207}&36.9^{+2.2}_{-2.4}&-9.6^{+7.1}_{-7.8}&-138.5^{+5.5}_{-5.5}&81.4^{+5.1}_{-4.5}&10.6^{+1.0}_{-0.5}&57.0^{+6.7}_{-5.7}&23.0^{+4.2}_{-4.0}&\\
-bar&0.0-1.0&0.4139^{+0.0505}_{-0.0469}&-6.0^{+2.8}_{-2.9}&-5.7^{+2.3}_{-2.2}&-54.6^{+2.7}_{-2.5}&22.8^{+9.3}_{-7.7}&34.3^{+3.7}_{-3.3}&23.4^{+2.1}_{-2.1}&62.6^{+3.5}_{-3.9}&\\
+disc&0.0-1.0&0.4139^{+0.0505}_{-0.0469}&-6.0^{+2.8}_{-2.9}&-5.7^{+2.3}_{-2.2}&-54.6^{+2.7}_{-2.5}&22.8^{+9.3}_{-7.7}&34.3^{+3.7}_{-3.3}&23.4^{+2.1}_{-2.1}&62.6^{+3.5}_{-3.9}&\\
 bar&0.0-1.0&0.4403^{+0.0454}_{-0.0537}&-8.0^{+3.5}_{-3.3}&-1.5^{+2.2}_{-1.2}&-53.4^{+2.7}_{-2.6}&59.1^{+10.8}_{-10.3}&68.8^{+3.5}_{-3.3}&59.3^{+3.5}_{-3.1}&69.4^{+3.4}_{-3.1}&\\
 disc&1.0-2.0&0.2652^{+0.0281}_{-0.03}&2.0^{+1.9}_{-2.0}&-2.3^{+3.1}_{-3.5}&-152.4^{+5.8}_{-4.5}&14.3^{+5.8}_{-4.5}&26.6^{+2.4}_{-2.3}&45.8^{+3.7}_{-3.3}&115.5^{+4.9}_{-5.0}&\\
 disc&1.0-2.0&0.4703^{+0.0287}_{-0.029}&2.7^{+3.4}_{-3.3}&0.9^{+2.6}_{-2.4}&-146.8^{+4.1}_{-4.4}&82.1^{+6.0}_{-5.1}&90.8^{+3.0}_{-2.9}&78.0^{+2.4}_{-2.1}&105.3^{+3.3}_{-3.3}&\\
