--- a/data/bulgemock/fits/table.tex
+++ b/data/bulgemock/fits/table.tex
@@ -1,6 +1,6 @@
 comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.3242^{+0.0204}_{-0.0197}&2.5^{+3.2}_{-2.9}&-2.8^{+2.7}_{-2.8}&-111.2^{+4.7}_{-5.0}&28.5^{+16.7}_{-19.8}&59.7^{+3.1}_{-3.4}&54.1^{+2.8}_{-2.6}&43.3^{+4.1}_{-3.1}&\\
-knot&0.0-1.0&0.183^{+0.0201}_{-0.0202}&-0.2^{+2.2}_{-0.8}&-0.1^{+1.6}_{-0.9}&-0.1^{+2.4}_{-0.8}&52.1^{+5.2}_{-5.3}&63.6^{+5.6}_{-5.2}&38.7^{+3.4}_{-3.2}&49.5^{+3.6}_{-3.2}&\\
+bar&0.0-1.0&0.183^{+0.0201}_{-0.0202}&-0.2^{+2.2}_{-0.8}&-0.1^{+1.6}_{-0.9}&-0.1^{+2.4}_{-0.8}&52.1^{+5.2}_{-5.3}&63.6^{+5.6}_{-5.2}&38.7^{+3.4}_{-3.2}&49.5^{+3.6}_{-3.2}&\\
 knot&0.0-1.0&0.4929^{+0.0128}_{-0.0124}&-0.0^{+0.3}_{-0.1}&0.0^{+0.2}_{-0.2}&-0.0^{+0.3}_{-0.1}&42.7^{+30.4}_{-33.8}&10.0^{+0.1}_{-0.0}&10.0^{+0.1}_{-0.0}&10.0^{+0.0}_{-0.0}&\\
 disc&1.0-2.0&0.6123^{+0.0132}_{-0.0134}&2.7^{+2.0}_{-2.0}&1.4^{+1.8}_{-1.7}&-151.3^{+3.4}_{-3.4}&82.2^{+4.5}_{-4.4}&78.8^{+1.9}_{-1.8}&66.2^{+1.3}_{-1.2}&106.4^{+2.3}_{-2.3}&\\
 knot&1.0-2.0&0.2513^{+0.0099}_{-0.01}&-0.5^{+0.5}_{-0.5}&0.3^{+0.6}_{-0.5}&-1.4^{+0.6}_{-0.6}&56.8^{+35.8}_{-23.3}&10.1^{+0.1}_{-0.1}&10.2^{+0.2}_{-0.1}&10.5^{+0.5}_{-0.3}&\\
