Add mock classifications; fix headers

--- a/data/apogee/fits/table.tex
+++ b/data/apogee/fits/table.tex
@@ -1,3 +1,4 @@
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.1596^{+0.0262}_{-0.0258}&1.8^{+12.4}_{-12.7}&9.3^{+12.0}_{-12.3}&-92.8^{+10.1}_{-9.5}&24.2^{+16.5}_{-54.0}&130.4^{+14.1}_{-10.4}&142.3^{+13.7}_{-14.4}&41.7^{+6.3}_{-6.2}&\\
 bar&0.0-1.0&0.6136^{+0.0286}_{-0.0274}&2.5^{+3.2}_{-3.1}&2.2^{+2.4}_{-2.5}&-11.7^{+2.8}_{-2.8}&38.8^{+3.6}_{-3.6}&80.3^{+3.0}_{-2.8}&55.7^{+3.0}_{-2.8}&30.8^{+2.5}_{-2.2}&\\
 knot&0.0-1.0&0.2274^{+0.0207}_{-0.0203}&-0.7^{+2.3}_{-1.0}&-0.8^{+1.5}_{-0.9}&0.0^{+0.8}_{-0.8}&33.5^{+5.1}_{-4.3}&25.8^{+2.8}_{-2.6}&10.5^{+0.9}_{-0.4}&10.1^{+0.2}_{-0.1}&\\
