--- a/data/bulgemock/fits/table_apog0.tex
+++ b/data/bulgemock/fits/table_apog0.tex
@@ -1,3 +1,4 @@
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.108^{+0.0186}_{-0.0202}&-32.5^{+15.5}_{-13.4}&-6.6^{+20.3}_{-21.8}&-62.5^{+14.5}_{-12.9}&38.3^{+24.6}_{-34.6}&104.4^{+12.3}_{-11.5}&96.8^{+13.0}_{-13.7}&68.7^{+8.5}_{-8.0}&\\
 bar&0.0-1.0&0.3661^{+0.0234}_{-0.0223}&-0.2^{+2.7}_{-2.4}&-2.2^{+3.0}_{-2.4}&-5.8^{+3.1}_{-3.3}&23.1^{+10.9}_{-10.6}&50.5^{+3.0}_{-2.9}&38.8^{+4.0}_{-3.8}&32.8^{+2.9}_{-2.7}&\\
 knot&0.0-1.0&0.5256^{+0.0181}_{-0.0179}&-0.0^{+0.4}_{-0.3}&0.1^{+0.2}_{-0.4}&-0.1^{+0.4}_{-0.2}&43.8^{+31.1}_{-33.2}&10.1^{+0.1}_{-0.1}&10.1^{+0.1}_{-0.1}&10.0^{+0.1}_{-0.0}&\\
