--- a/data/barmock/fits/table_apog0.tex
+++ b/data/barmock/fits/table_apog0.tex
@@ -1,3 +1,4 @@
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.0916^{+0.0211}_{-0.022}&-23.4^{+20.3}_{-19.1}&-4.1^{+20.2}_{-18.2}&-88.9^{+13.1}_{-14.6}&44.6^{+17.0}_{-16.0}&143.3^{+21.1}_{-16.9}&108.3^{+17.8}_{-15.4}&30.8^{+10.5}_{-10.5}&\\
 bar&0.0-1.0&0.5225^{+0.028}_{-0.0275}&7.4^{+3.1}_{-3.2}&1.3^{+3.2}_{-3.3}&-13.8^{+3.3}_{-3.4}&29.4^{+8.9}_{-7.7}&60.4^{+3.7}_{-3.2}&46.1^{+4.1}_{-3.6}&42.7^{+3.1}_{-2.8}&\\
 knot&0.0-1.0&0.3854^{+0.0263}_{-0.0257}&-0.1^{+0.8}_{-0.5}&0.1^{+0.4}_{-0.7}&-0.1^{+0.7}_{-0.4}&30.0^{+6.9}_{-5.6}&18.7^{+1.9}_{-1.7}&10.7^{+0.9}_{-0.5}&10.2^{+0.4}_{-0.2}&\\
