--- a/data/barmock/fits/table_apog1.tex
+++ b/data/barmock/fits/table_apog1.tex
@@ -1,3 +1,4 @@
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.8133^{+0.0932}_{-0.0657}&5.5^{+9.7}_{-8.7}&3.3^{+10.3}_{-9.3}&-65.5^{+7.5}_{-6.3}&43.1^{+27.5}_{-29.4}&138.9^{+8.3}_{-8.0}&138.0^{+9.5}_{-7.8}&53.8^{+4.1}_{-3.6}&\\
 bar&0.0-1.0&0.1163^{+0.065}_{-0.0908}&2.0^{+8.2}_{-11.9}&-0.8^{+9.4}_{-7.6}&-7.4^{+10.4}_{-7.1}&42.4^{+15.5}_{-12.2}&95.8^{+60.8}_{-75.8}&24.3^{+30.4}_{-11.2}&16.3^{+9.0}_{-4.9}&\\
 knot&0.0-1.0&0.0715^{+0.0246}_{-0.025}&0.3^{+2.2}_{-3.4}&-0.2^{+3.5}_{-2.5}&-0.8^{+3.4}_{-1.6}&42.2^{+26.1}_{-29.0}&15.3^{+9.4}_{-3.8}&14.6^{+9.3}_{-3.5}&11.7^{+3.2}_{-1.4}&\\
