--- a/data/bulgemock/fits/table_apog1.tex
+++ b/data/bulgemock/fits/table_apog1.tex
@@ -1,3 +1,4 @@
+comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\sigma_z$ \\
 disc&0.0-1.0&0.2564^{+0.0282}_{-0.0373}&3.8^{+18.3}_{-20.3}&25.3^{+12.7}_{-13.6}&-94.4^{+8.9}_{-11.3}&48.1^{+31.2}_{-27.1}&146.5^{+12.7}_{-11.3}&144.5^{+13.2}_{-11.8}&50.6^{+5.9}_{-5.5}&\\
 bar&0.0-1.0&0.0927^{+0.0288}_{-0.0263}&0.5^{+5.0}_{-8.4}&0.5^{+4.4}_{-7.6}&-5.8^{+6.6}_{-5.6}&60.0^{+4.6}_{-4.2}&165.9^{+25.5}_{-26.9}&44.4^{+12.3}_{-16.3}&12.4^{+3.6}_{-1.9}&\\
 knot&0.0-1.0&0.6517^{+0.0229}_{-0.0196}&0.0^{+0.2}_{-0.3}&-0.0^{+0.3}_{-0.3}&-0.0^{+0.3}_{-0.3}&27.5^{+18.8}_{-43.6}&10.9^{+0.6}_{-0.6}&10.3^{+0.5}_{-0.2}&10.0^{+0.1}_{-0.0}&\\
