--- a/data/barmock/fits/table_apog1.tex
+++ b/data/barmock/fits/table_apog1.tex
@@ -6,7 +6,7 @@ disc&1.0-2.0&0.6668^{+0.0696}_{-0.0427}&0.9^{+6.5}_{-6.5}&4.2^{+6.1}_{-5.9}&-171
 bar&1.0-2.0&0.2745^{+0.038}_{-0.0487}&-14.4^{+8.7}_{-8.1}&0.3^{+4.5}_{-6.7}&-38.8^{+13.5}_{-9.3}&40.8^{+4.4}_{-7.3}&99.0^{+19.3}_{-11.4}&30.9^{+15.5}_{-7.7}&50.2^{+9.7}_{-7.8}&\\
 knot&1.0-2.0&0.0593^{+0.0157}_{-0.0275}&-0.9^{+3.5}_{-1.9}&0.3^{+1.6}_{-2.4}&-1.2^{+2.8}_{-1.5}&34.4^{+13.9}_{-19.6}&18.1^{+14.4}_{-6.7}&10.6^{+1.2}_{-0.5}&11.0^{+2.0}_{-0.8}&\\
 disc&2.0-3.0&0.6476^{+0.0694}_{-0.062}&-1.0^{+7.4}_{-7.2}&-8.2^{+5.1}_{-4.6}&-315.6^{+6.9}_{-6.8}&72.4^{+3.7}_{-3.7}&184.6^{+10.4}_{-9.0}&137.3^{+7.2}_{-5.8}&155.4^{+5.0}_{-4.9}&\\
-disc&2.0-3.0&0.1889^{+0.0781}_{-0.0713}&-3.1^{+8.2}_{-8.3}&16.4^{+7.1}_{-4.8}&-300.5^{+11.2}_{-15.4}&60.6^{+16.6}_{-16.9}&66.2^{+15.2}_{-14.1}&39.3^{+11.7}_{-22.7}&157.6^{+11.1}_{-13.3}&\\
+bar&2.0-3.0&0.1889^{+0.0781}_{-0.0713}&-3.1^{+8.2}_{-8.3}&16.4^{+7.1}_{-4.8}&-300.5^{+11.2}_{-15.4}&60.6^{+16.6}_{-16.9}&66.2^{+15.2}_{-14.1}&39.3^{+11.7}_{-22.7}&157.6^{+11.1}_{-13.3}&\\
 bar&2.0-3.0&0.1687^{+0.0186}_{-0.0209}&-2.0^{+9.4}_{-9.9}&1.4^{+2.5}_{-2.0}&-54.3^{+8.6}_{-8.4}&65.6^{+1.4}_{-1.4}&123.9^{+11.2}_{-9.9}&12.2^{+4.9}_{-1.8}&59.5^{+6.7}_{-6.2}&\\
 -&3.0-4.0&0.003^{+0.0019}_{-0.002}&56.7^{+283.8}_{-276.2}&503.1^{+83.3}_{-69.9}&-449.7^{+89.8}_{-150.9}&45.8^{+30.1}_{-30.9}&15.5^{+20.1}_{-4.3}&26.2^{+25.8}_{-13.1}&118.2^{+72.8}_{-104.5}&\\
 disc&3.0-4.0&0.7815^{+0.0224}_{-0.0192}&-3.9^{+4.0}_{-4.2}&-5.9^{+3.0}_{-3.0}&-619.8^{+4.3}_{-4.5}&80.3^{+3.1}_{-3.4}&170.5^{+3.3}_{-3.1}&135.8^{+3.5}_{-3.0}&110.4^{+3.2}_{-3.2}&\\
