--- a/data/barmock/fits/table_apog1.tex
+++ b/data/barmock/fits/table_apog1.tex
@@ -2,12 +2,24 @@ comp &radii & f & $L_x$& $L_y$ & $L_z$ & $lpha$ & $\sigma_x$ & $\sigma_y$ & $\s
 disc&0.0-1.0&0.8133^{+0.0932}_{-0.0657}&5.5^{+9.7}_{-8.7}&3.3^{+10.3}_{-9.3}&-65.5^{+7.5}_{-6.3}&43.1^{+27.5}_{-29.4}&138.9^{+8.3}_{-8.0}&138.0^{+9.5}_{-7.8}&53.8^{+4.1}_{-3.6}&\\
 bar&0.0-1.0&0.1163^{+0.065}_{-0.0908}&2.0^{+8.2}_{-11.9}&-0.8^{+9.4}_{-7.6}&-7.4^{+10.4}_{-7.1}&42.4^{+15.5}_{-12.2}&95.8^{+60.8}_{-75.8}&24.3^{+30.4}_{-11.2}&16.3^{+9.0}_{-4.9}&\\
 knot&0.0-1.0&0.0715^{+0.0246}_{-0.025}&0.3^{+2.2}_{-3.4}&-0.2^{+3.5}_{-2.5}&-0.8^{+3.4}_{-1.6}&42.2^{+26.1}_{-29.0}&15.3^{+9.4}_{-3.8}&14.6^{+9.3}_{-3.5}&11.7^{+3.2}_{-1.4}&\\
+disc&0.5-1.5&0.7566^{+0.0326}_{-0.0312}&-5.6^{+6.6}_{-6.8}&1.0^{+7.2}_{-6.5}&-115.4^{+5.5}_{-5.4}&21.2^{+9.1}_{-8.4}&156.8^{+5.7}_{-5.3}&128.9^{+6.0}_{-5.5}&77.8^{+3.7}_{-3.4}&\\
+bar&0.5-1.5&0.2041^{+0.0336}_{-0.0306}&-0.0^{+8.5}_{-7.5}&-1.1^{+4.4}_{-4.8}&-14.8^{+5.6}_{-5.4}&27.1^{+4.7}_{-4.7}&83.1^{+12.4}_{-11.4}&24.1^{+9.3}_{-5.6}&28.1^{+4.3}_{-4.1}&\\
+knot&0.5-1.5&0.0394^{+0.0132}_{-0.0171}&-1.5^{+5.5}_{-2.8}&0.4^{+2.9}_{-4.0}&-0.9^{+3.9}_{-2.4}&42.0^{+24.4}_{-30.3}&14.2^{+9.4}_{-3.3}&11.8^{+4.2}_{-1.4}&11.3^{+3.0}_{-1.0}&\\
 disc&1.0-2.0&0.6668^{+0.0696}_{-0.0427}&0.9^{+6.5}_{-6.5}&4.2^{+6.1}_{-5.9}&-171.2^{+10.8}_{-8.1}&18.1^{+11.0}_{-10.6}&153.8^{+5.2}_{-4.9}&131.8^{+6.1}_{-5.5}&101.2^{+4.1}_{-4.0}&\\
 bar&1.0-2.0&0.2745^{+0.038}_{-0.0487}&-14.4^{+8.7}_{-8.1}&0.3^{+4.5}_{-6.7}&-38.8^{+13.5}_{-9.3}&40.8^{+4.4}_{-7.3}&99.0^{+19.3}_{-11.4}&30.9^{+15.5}_{-7.7}&50.2^{+9.7}_{-7.8}&\\
 knot&1.0-2.0&0.0593^{+0.0157}_{-0.0275}&-0.9^{+3.5}_{-1.9}&0.3^{+1.6}_{-2.4}&-1.2^{+2.8}_{-1.5}&34.4^{+13.9}_{-19.6}&18.1^{+14.4}_{-6.7}&10.6^{+1.2}_{-0.5}&11.0^{+2.0}_{-0.8}&\\
+disc&1.5-2.5&0.5842^{+0.0281}_{-0.0265}&2.8^{+7.4}_{-6.8}&-5.7^{+6.0}_{-6.1}&-238.3^{+7.1}_{-7.1}&45.7^{+31.5}_{-29.8}&149.8^{+5.7}_{-5.3}&147.3^{+5.3}_{-5.2}&124.9^{+4.6}_{-4.6}&\\
+bar&1.5-2.5&0.349^{+0.0262}_{-0.0269}&-4.3^{+8.7}_{-8.5}&4.3^{+2.5}_{-2.7}&-79.5^{+9.5}_{-8.8}&58.6^{+1.7}_{-1.6}&134.7^{+8.7}_{-9.1}&29.8^{+3.4}_{-3.1}&77.3^{+6.6}_{-5.9}&\\
+knot&1.5-2.5&0.0665^{+0.0129}_{-0.0145}&-1.8^{+4.3}_{-2.0}&-0.2^{+1.8}_{-1.4}&-1.3^{+3.0}_{-1.7}&44.2^{+9.4}_{-7.6}&22.7^{+8.0}_{-6.9}&10.4^{+0.8}_{-0.3}&11.5^{+2.6}_{-1.2}&\\
 disc&2.0-3.0&0.6476^{+0.0694}_{-0.062}&-1.0^{+7.4}_{-7.2}&-8.2^{+5.1}_{-4.6}&-315.6^{+6.9}_{-6.8}&72.4^{+3.7}_{-3.7}&184.6^{+10.4}_{-9.0}&137.3^{+7.2}_{-5.8}&155.4^{+5.0}_{-4.9}&\\
 bar&2.0-3.0&0.1889^{+0.0781}_{-0.0713}&-3.1^{+8.2}_{-8.3}&16.4^{+7.1}_{-4.8}&-300.5^{+11.2}_{-15.4}&60.6^{+16.6}_{-16.9}&66.2^{+15.2}_{-14.1}&39.3^{+11.7}_{-22.7}&157.6^{+11.1}_{-13.3}&\\
 bar&2.0-3.0&0.1687^{+0.0186}_{-0.0209}&-2.0^{+9.4}_{-9.9}&1.4^{+2.5}_{-2.0}&-54.3^{+8.6}_{-8.4}&65.6^{+1.4}_{-1.4}&123.9^{+11.2}_{-9.9}&12.2^{+4.9}_{-1.8}&59.5^{+6.7}_{-6.2}&\\
+disc&2.5-3.5&0.3785^{+0.0255}_{-0.0265}&2.0^{+5.4}_{-5.2}&2.2^{+6.1}_{-5.3}&-559.0^{+5.6}_{-5.6}&44.1^{+31.0}_{-32.5}&103.1^{+7.1}_{-6.4}&102.9^{+6.1}_{-5.8}&72.3^{+6.1}_{-5.7}&\\
+disc&2.5-3.5&0.3592^{+0.0342}_{-0.0318}&6.7^{+10.9}_{-9.5}&-7.0^{+6.8}_{-6.9}&-416.5^{+12.9}_{-14.2}&77.3^{+3.3}_{-3.3}&227.7^{+8.8}_{-8.1}&159.1^{+6.2}_{-6.3}&169.5^{+6.5}_{-6.5}&\\
+bar&2.5-3.5&0.2626^{+0.0212}_{-0.0198}&-0.2^{+6.7}_{-6.7}&3.3^{+2.3}_{-2.6}&-192.5^{+10.2}_{-10.2}&74.1^{+1.2}_{-1.2}&142.5^{+7.3}_{-7.2}&38.2^{+3.1}_{-3.3}&116.1^{+7.0}_{-6.2}&\\
 -&3.0-4.0&0.003^{+0.0019}_{-0.002}&56.7^{+283.8}_{-276.2}&503.1^{+83.3}_{-69.9}&-449.7^{+89.8}_{-150.9}&45.8^{+30.1}_{-30.9}&15.5^{+20.1}_{-4.3}&26.2^{+25.8}_{-13.1}&118.2^{+72.8}_{-104.5}&\\
 disc&3.0-4.0&0.7815^{+0.0224}_{-0.0192}&-3.9^{+4.0}_{-4.2}&-5.9^{+3.0}_{-3.0}&-619.8^{+4.3}_{-4.5}&80.3^{+3.1}_{-3.4}&170.5^{+3.3}_{-3.1}&135.8^{+3.5}_{-3.0}&110.4^{+3.2}_{-3.2}&\\
 bar&3.0-4.0&0.2152^{+0.0196}_{-0.0228}&12.5^{+6.3}_{-6.9}&3.7^{+2.6}_{-2.7}&-295.4^{+22.3}_{-18.1}&75.8^{+1.0}_{-1.0}&181.9^{+7.6}_{-6.6}&46.9^{+2.7}_{-2.4}&139.5^{+13.5}_{-11.0}&\\
+-&3.5-4.5&0.0013^{+0.0007}_{-0.0006}&-431.9^{+88.6}_{-223.5}&357.6^{+196.6}_{-104.3}&-912.3^{+19.2}_{-426.7}&70.6^{+24.7}_{-11.5}&13.0^{+7.6}_{-2.1}&41.2^{+29.8}_{-25.4}&16.0^{+10.9}_{-3.8}&\\
+-&3.5-4.5&0.0003^{+0.0002}_{-0.0004}&290.4^{+744.4}_{-454.0}&385.7^{+807.1}_{-385.3}&326.6^{+418.8}_{-336.5}&40.8^{+22.3}_{-25.2}&13.8^{+6.9}_{-2.6}&14.2^{+6.4}_{-2.8}&16.1^{+8.6}_{-3.7}&\\
+disc&3.5-4.5&0.9984^{+0.0007}_{-0.0007}&-5.8^{+2.2}_{-2.1}&-2.6^{+1.7}_{-1.4}&-678.3^{+2.7}_{-2.9}&84.0^{+1.6}_{-1.2}&174.8^{+1.5}_{-1.5}&129.5^{+1.5}_{-1.3}&166.6^{+1.7}_{-1.5}&\\
